added load static

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,5 +1,7 @@
 {% extends "website/layouts/base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
+
 {% block content %}
 
 <section id="register">
