--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,6 +1,6 @@
 {% extends "website/layouts/base.html" %}
 {% load crispy_forms_tags %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% block content %}
 
