--- a/weorganization/templates/pages/existing_sheet.html
+++ b/weorganization/templates/pages/existing_sheet.html
@@ -1,5 +1,5 @@
 {% extends "website/layouts/base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 {% block content %}
 
 <section id="weekly-sheet-head">
