--- a/website/templates/website/layouts/base.html
+++ b/website/templates/website/layouts/base.html
@@ -2,7 +2,7 @@
 
 <html lang="fr">
 <head>
-  {% load static %}
+{% load static from staticfiles %}
   <script src="{% static 'website/js/main.js' %}"></script>
   <meta charset="utf-8">
   <title>Apprendre13</title>
