--- a/website/templates/website/pages/profile_sheet.html
+++ b/website/templates/website/pages/profile_sheet.html
@@ -1,6 +1,6 @@
 {% extends "website/layouts/base.html" %}
 {% load crispy_forms_tags %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% block content %}
 
