--- a/website/templates/website/pages/profile_confirm_delete.html
+++ b/website/templates/website/pages/profile_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends "website/layouts/base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 
 {% block content %}
 <section id="delete">
