--- a/website/templates/website/layouts/base.html
+++ b/website/templates/website/layouts/base.html
@@ -1,8 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 
 <html lang="fr">
 <head>
-{% load static %}
+
   <script src="{% static 'website/js/main.js' %}"></script>
   <meta charset="utf-8">
   <title>Apprendre13</title>
@@ -16,8 +18,8 @@
     <title>Apprendre13</title>
     {% endif %}
 
-  <!-- Favicons -->
-  <link href="{% static 'website/img/favicon.png' %}" rel="icon">
+    <!-- Favicons -->
+  <link href="{% static  'website/img/favicon.png' %}" rel="icon" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
